--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "simply-text",
   "version": "0.1.0",
-  "homepage": "https://simply-text.github.io/simply-text/",
+  "homepage": "https://simply-text.github.io/",
   "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -12,6 +12,8 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.0.3",
+    "react-router-dom": "^6.4.2",
     "web-vitals": "^3.0.2"
   },
   "scripts": {
