--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.0.3",
     "react-router-dom": "^6.4.2",
+    "react-webcam": "^7.0.1",
     "web-vitals": "^3.0.2"
   },
   "scripts": {
