--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "simply-text",
   "version": "0.1.0",
-  "homepage": "https://simply-text.github.io/",
+  "homepage": "https://simply-text.github.io/simply-text/",
   "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
