--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-firebase-hooks": "^5.0.3",
     "react-router-dom": "^6.4.2",
     "react-webcam": "^7.0.1",
+    "tesseract.js": "^3.0.3",
     "typesense": "^v1.4.2",
     "web-vitals": "^3.0.2"
   },
