--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^14.4.3",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
+    "cors": "^2.8.5",
     "firebase": "^9.10.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
